Fix wrong margin in selection-text

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body{
 }
 
 .selection-text{
-    margin: 8px;
+    margin-top: 8px;
 }
 
 .player, .computer, .button{
